--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,4 +28,23 @@
         android:layout_height="wrap_content"
         tools:text="@string/longitude"
         android:padding="10dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/location_one_time"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"/>
+    <TextView
+        android:id="@+id/txt_latitude_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/latitude"
+        android:padding="10dp"/>
+    <TextView
+        android:id="@+id/txt_longitude_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/longitude"
+        android:padding="10dp"/>
 </LinearLayout>
