--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
             android:text="@string/location_continuously"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/txt_latitude"
@@ -41,7 +42,8 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text="@string/location_one_time"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/txt_latitude_one"
@@ -63,7 +65,8 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text="@string/location_info"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorAccent" />
 
         <TextView
             android:id="@+id/txt_country"
@@ -92,7 +95,8 @@
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
             android:text="@string/location_activities"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorAccent" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,14 +110,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="requestActivityUpdatesButtonHandler"
-                android:text="@string/request_activity_updates" />
+                android:text="@string/request_activity_updates"
+                android:textColor="@color/colorPrimary" />
 
             <Button
                 android:id="@+id/remove_activity_updates_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="removeActivityUpdatesButtonHandler"
-                android:text="@string/remove_activity_updates" />
+                android:text="@string/remove_activity_updates"
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
 
         <TextView
